--- a/src/Components/Body/Cart.css
+++ b/src/Components/Body/Cart.css
@@ -1,12 +1,18 @@
 .cart {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: center; */
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1rem;
 }
 .text-color {
   border-color: red !important;
   color: red !important;
+  min-width: 138px !important;
+  padding: 5px 5px !important;
 }
 .cartt {
-  margin-top: 30px;
+  margin-top: 150px;
 }
