--- a/src/Components/Accordino/RightSide/ViewFear.css
+++ b/src/Components/Accordino/RightSide/ViewFear.css
@@ -1,13 +1,13 @@
-.viewfear{
-    /* padding: 10px; */
-    border: 1px solid red !important;
-    font-size: 14px;
+.viewfear {
+  /* padding: 10px; */
+  border: 1px solid red !important;
+  font-size: 14px;
 }
-h3,del{
-    padding: 0px;
-    margin: 0px;
+h3,
+del {
+  padding: 0px;
+  margin: 0px;
 }
-.viewfear .MuiSvgIcon-root{
-margin-top:10px !important ;
-
+.viewfear .MuiSvgIcon-root {
+  margin-top: 10px !important ;
 }
