--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,65 +1,61 @@
 .button {
-    background-color: aquamarine;
-    color: white;
-    border: 2px white solid;
+  background-color: aquamarine;
+  color: white;
+  border: 2px white solid;
 }
 .topHeader {
-    margin: 50px;
+  margin: 50px;
 }
 .css-zxtyt4-MuiPaper-root-MuiAppBar-root {
-    width: calc(100% - 100px) !important;
-    margin-left: 100px !important;
+  width: calc(100% - 100px) !important;
+  margin-left: 100px !important;
 }
 .css-d9ml5t-MuiDrawer-docked .MuiDrawer-paper {
-    box-sizing: border-box;
-    width: 100px !important;
+  box-sizing: border-box;
+  width: 100px !important;
 }
 .bg-color {
-    background-color: #002441;
+  background-color: #002441;
 }
 header {
-    background-color: #002441 !important;
+  background-color: #002441 !important;
 }
 .MuiDrawer-paperAnchorLeft {
-    color: white !important;
-    background-color: #002441 !important;
+  color: white !important;
+  background-color: #002441 !important;
 }
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
-    border-right: 1px solid white !important;
+  border-right: 1px solid white !important;
 }
-.css-1rwt2y5-MuiButtonBase-root-MuiButton-root {
-    border: 1px solid white !important;
-    color: white !important;
+.flywayButton.css-1rwt2y5-MuiButtonBase-root-MuiButton-root {
+  border: 1px solid white !important;
+  color: white !important;
 }
 .search-color {
-    background-color: #f0f8ff !important;
-    padding-right: 30px;
-    margin-right: 30px;
-    color: #002441 !important;
+  background-color: #f0f8ff !important;
+  padding-right: 30px;
+  margin-right: 30px;
+  color: #002441 !important;
 }
 /* .MuiSvgIcon-root{
   color: white !important;
 } */
 .Icon-style {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 50vh;
 }
 
 .Icon {
-    /* justify-content: auto;
+  /* justify-content: auto;
    */
-    margin: auto;
-    padding-bottom: 10px;
-    font-size: 3rem !important;
-    /* font-size: 200px; */
+  margin: auto;
+  padding-bottom: 10px;
+  font-size: 3rem !important;
+  /* font-size: 200px; */
 }
 /* Header Z-index  */
 .RightSideheader {
-    /* background-color: black !important; */
-    z-index: 1200;
-}
-.RightSideheaderr {
-    z-index: -1;
+  margin-top: 50px;
 }
