--- a/src/Components/Body/Cart.css
+++ b/src/Components/Body/Cart.css
@@ -1,20 +1,68 @@
 .cart {
-    /* display: flex;
-  flex-direction: row;
-  justify-content: center; */
-
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 1rem;
-    margin-top: 80px;
-    z-index: 200 !important;
+  margin-top: 80px;
 }
 .text-color {
-    border-color: red !important;
-    color: red !important;
-    min-width: 138px !important;
-    padding: 5px 5px !important;
+  border-color: red !important;
+  color: red !important;
+  min-width: 138px !important;
+  /* padding: 5px 5px !important; */
 }
-.cartt {
-    z-index: 1200;
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  /* CSS */
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* CSS */
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  /* CSS */
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+/* @media (min-width: 481px) and (max-width: 767px) {
+  .cart {
+    font-size: 30px;
+  }
+} */
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  /* .cart {
+    font-size: 40px;
+  } */
+  .Font-size {
+    font-size: 40px !important;
+  }
 }
