--- a/src/Components/Token/Token.css
+++ b/src/Components/Token/Token.css
@@ -1,6 +1,7 @@
 .bdcard {
   display: flex;
   margin: 20px;
+  width: fit-content;
   border: 1px solid gray;
   padding: 5px 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -13,7 +14,7 @@
 }
 p,
 h5 {
-  /* margin: 5px; */
+  margin: 5px;
   padding: 0px;
   margin: 0px;
 }
