--- a/src/Component/LeftAndRightSide/ViewFear.css
+++ b/src/Component/LeftAndRightSide/ViewFear.css
@@ -8,3 +8,17 @@ del {
   padding: 0px;
   margin: 0px;
 }
+.transition-button {
+  transition-timing-function: ease-in-out;
+  transition-duration: 3s;
+}
+.viewfear p {
+  padding: 2px 0px;
+  margin: 0px;
+}
+@media (min-width: 320px) and (max-width: 480px) {
+  p {
+    padding: 0;
+    margin: 0;
+  }
+}
